WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201322
[MSE][GStreamer] Gracefully fail on invalid non-first initialization segment
https://bugs.webkit.org/show_bug.cgi?id=201322
Summary
[MSE][GStreamer] Gracefully fail on invalid non-first initialization segment
Alicia Boya García
Reported
2019-08-29 17:44:54 PDT
In normal operation of AppendPipeline, except during tear down, qtdemux never removes a pad. Even if a new initialization segment is appended, the pad is reused. There is an exception though: when the new initialization segment has an incompatible set of tracks. This is invalid under the MSE spec and should produce an error, but in this case this was making an assertion fail -- in particular by sending an EOS to the to-be-removed pad, which AppendPipeline doesn't expect. This patch changes the assertion with graceful error handling for that error. Fixes media/media-source/media-source-seek-detach-crash.html
Attachments
Patch
(6.96 KB, patch)
2019-08-29 17:46 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2019-08-29 17:46:26 PDT
Created
attachment 377661
[details]
Patch
WebKit Commit Bot
Comment 2
2019-08-30 08:15:00 PDT
Comment on
attachment 377661
[details]
Patch Clearing flags on attachment: 377661 Committed
r249325
: <
https://trac.webkit.org/changeset/249325
>
WebKit Commit Bot
Comment 3
2019-08-30 08:15:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug